Configure Vercel to handle Git LFS files

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "git lfs pull || echo 'Git LFS pull failed, continuing...'"
   },
   "dependencies": {
     "framer-motion": "^12.23.26",
