--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,20 @@
 {
   "headers": [
     {
-      "source": "/(.*)\\.mp4",
+      "source": "/(.*)\\.(mp4|webm)",
       "headers": [
-        { "key": "Content-Type", "value": "video/mp4" },
         { "key": "Content-Disposition", "value": "inline" },
         { "key": "Accept-Ranges", "value": "bytes" },
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
+    },
+    {
+      "source": "/(.*)\\.mp4",
+      "headers": [{ "key": "Content-Type", "value": "video/mp4" }]
+    },
+    {
+      "source": "/(.*)\\.webm",
+      "headers": [{ "key": "Content-Type", "value": "video/webm" }]
     }
   ]
 }
