--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,22 @@
 {
   "headers": [
     {
-      "source": "/(.*)\\.(mp4|webm)",
+      "source": "/(.*)\\.mp4",
       "headers": [
+        { "key": "Content-Type", "value": "video/mp4" },
         { "key": "Content-Disposition", "value": "inline" },
         { "key": "Accept-Ranges", "value": "bytes" },
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
       ]
     },
     {
-      "source": "/(.*)\\.mp4",
-      "headers": [{ "key": "Content-Type", "value": "video/mp4" }]
-    },
-    {
       "source": "/(.*)\\.webm",
-      "headers": [{ "key": "Content-Type", "value": "video/webm" }]
+      "headers": [
+        { "key": "Content-Type", "value": "video/webm" },
+        { "key": "Content-Disposition", "value": "inline" },
+        { "key": "Accept-Ranges", "value": "bytes" },
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
     }
   ]
 }
